Milestone Project Online Store - Add base CSS file & static file

--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -1,9 +1,11 @@
 <%- include('../includes/head', { pageTitle: '가입하기' })  %>
+<link rel="stylesheet" href="/styles/forms.css">
+<link rel="stylesheet" href="/styles/auth.css">
 </head>
 <body>
   <%- include('../includes/header')  %>
   <main>
-    <h1>Create New Account</h1>
+    <h1>새 계정 만들기</h1>
     <form action="" method="">
       <p>
         <label for="email">이메일</label>
