--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -6,7 +6,7 @@
   <%- include('../includes/header')  %>
   <main>
     <h1>새 계정 만들기</h1>
-    <form action="" method="">
+    <form action="/signup" method="POST">
       <p>
         <label for="email">이메일</label>
         <input type="email" id="email" name="email" required>
