--- a/views/customer/auth/login.ejs
+++ b/views/customer/auth/login.ejs
@@ -6,7 +6,7 @@
   <%- include('../../shared/includes/header')  %>
   <main>
     <h1>로그인</h1>
-    <form action="/signup" method="POST">
+    <form action="/login" method="POST">
       <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
       <p>
         <label for="email">이메일</label>
