--- a/views/shared/includes/header.ejs
+++ b/views/shared/includes/header.ejs
@@ -4,7 +4,10 @@
     <ul>
       <% if(locals.isAuth) { %>
       <li>
-        <button>로그아웃</button>
+        <form action="/logout" method="POST">
+          <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+          <button>로그아웃</button>
+        </form>
       </li>
       <% } %>
     </ul>
