--- a/views/customer/auth/login.ejs
+++ b/views/customer/auth/login.ejs
@@ -6,15 +6,21 @@
   <%- include('../../shared/includes/header')  %>
   <main>
     <h1>로그인</h1>
+    <% if (inputData.errorMessage) { %>
+      <section class="alert">
+        <h2>잘못된 사용자입니다.</h2>
+        <p><%= inputData.errorMessage %></p>
+      </section>
+    <% } %>
     <form action="/login" method="POST">
       <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
       <p>
         <label for="email">이메일</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" value="<%= inputData.email %>" required>
       </p>
       <p>
         <label for="password">비밀번호</label>
-        <input type="password" id="password" name="password" minlength="6" required>
+        <input type="password" id="password" name="password" value="<%= inputData.password %>" required>
       </p>
       <button class="btn">로그인</button>
       <p id="switch-form"><a href="/signup">새 계정 만들기</a></p>
