--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -6,28 +6,34 @@
   <%- include('../../shared/includes/header')  %>
   <main>
     <h1>새 계정 만들기</h1>
+    <% if (inputData.errorMessage) { %>
+      <section class="alert">
+        <h2>입력이 잘못되었습니다.</h2>
+        <p><%= inputData.errorMessage %></p>
+      </section>
+    <% } %>
     <form action="/signup" method="POST">
       <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
       <p>
         <label for="email">이메일</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" value="<%= inputData.email %>" required>
       </p>
       <p>
         <label for="confirm-email">이메일 확인</label>
-        <input type="email" id="confirm-email" name="confirm-email" required>
+        <input type="email" id="confirm-email" name="confirm-email" value="<%= inputData.confirmEmail %>" required>
       </p>
       <p>
         <label for="password">비밀번호</label>
-        <input type="password" id="password" name="password" minlength="6" required>
+        <input type="password" id="password" name="password" value="<%= inputData.password %>" minlength="6" required>
       </p>
       <hr>
       <p>
         <label for="fullname">이름</label>
-        <input type="text" id="fullname" name="fullname" required>
+        <input type="text" id="fullname" name="fullname" value="<%= inputData.fullname %>" required>
       </p>
       <p>
         <label for="street">주소</label>
-        <input type="text" id="street" name="street" required>
+        <input type="text" id="street" name="street" value="<%= inputData.street %>" required>
       </p>
       <p>
         <label for="postal">우편번호</label>
@@ -37,12 +43,13 @@
           name="postal" 
           minlength="5" 
           maxlength="5"
+          value="<%= inputData.postal %>"
           required
         >
       </p>
       <p>
         <label for="city">도시</label>
-        <input type="text" id="city" name="city" required>
+        <input type="text" id="city" name="city" value="<%= inputData.city %>" required>
       </p>
       <button class="btn">계정 만들기</button>
       <p id="switch-form"><a href="/login">로그인</a></p>
