Milestone Project Online Store - Set default navigation style

--- a/views/shared/includes/header.ejs
+++ b/views/shared/includes/header.ejs
@@ -1,34 +1,17 @@
-<header>
-  <div><a href="/">WDE</a></div>
+<header id="main-header">
+  <div id="logo"><a href="/">WDE</a></div>
   <nav>
-    <ul>
-      <% if (!locals.isAdmin) { %>
-      <li><a href="/">상점</a></li>
-      <li><a href="/cart">장바구니</a></li>
-      <% } %> 
-
-      <% if (locals.isAuth && !locals.isAdmin) { %>
-      <li><a href="/orders">주문목록</a></li>
-      <% } %> 
-      
-      <% if (locals.isAdmin) { %>
-      <li><a href="/admin/products">제품 관리</a></li>
-      <li><a href="/admin/orders">주문 관리</a></li>
-      <% } %> 
-
-      <% if (!locals.isAuth) { %>
-      <li><a href="/signup">가입하기</a></li>
-      <li><a href="/login">로그인</a></li>
-      <% } %>
-
-      <% if (locals.isAuth) { %>
-      <li>
-        <form action="/logout" method="POST">
-          <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-          <button>로그아웃</button>
-        </form>
-      </li>
-      <% } %>
-    </ul>
+    <%- include("nav-items") %>
   </nav>
+  <button id="mobile-menu-btn">
+    <span></span>
+    <span></span>
+    <span></span>
+  </button>
 </header>
+
+<aside id="mobile-menu">
+  <nav>
+    <%- include("nav-items") %>
+  </nav>
+</aside>
