--- a/views/shared/includes/head.ejs
+++ b/views/shared/includes/head.ejs
@@ -10,4 +10,5 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/base.css">
   <link rel="stylesheet" href="/styles/navigation.css">
+  <script defer src="/scripts/mobile.js"></script>
   
