--- a/views/admin/products/new-product.ejs
+++ b/views/admin/products/new-product.ejs
@@ -5,7 +5,7 @@
   <%- include('../../shared/includes/header')  %>
   <main>
     <h1>새로운 제품 추가</h1>
-    <form action="" method="">
+    <form action="/admin/products?_csrf=<%= locals.csrfToken %>" method="POST" enctype="multipart/form-data">
       <p>
         <label for="title">제목</label>
         <input type="text" id="title" name="title" required>
