--- a/views/admin/products/includes/product-item.ejs
+++ b/views/admin/products/includes/product-item.ejs
@@ -1,10 +1,12 @@
 <article class="product-item">
   <img src="<%= product.imageUrl %>" alt="<%= product.title %>" />
-  <h2><%= product.title %></h2>
-  <div>
-    <a href="/admin/products/<%= product.id %>" class="btn btn-alt"
-      >보기 및 수정</a
-    >
-    <button class="btn btn-alt">삭제</button>
+  <div class="product-item-content">
+    <h2><%= product.title %></h2>
+    <div class="product-item-actions">
+      <a href="/admin/products/<%= product.id %>" class="btn btn-alt"
+        >보기 및 수정</a
+      >
+      <button class="btn btn-alt">삭제</button>
+    </div>
   </div>
 </article>
