--- a/views/admin/products/update-product.ejs
+++ b/views/admin/products/update-product.ejs
@@ -5,6 +5,6 @@
   <%- include('../../shared/includes/header')  %>
   <main>
     <h1>제품 업데이트</h1>
-    <%- include('includes/product-form', { submitPath: '/admin/products/' + product.id, product: product }) %>
+    <%- include('includes/product-form', { submitPath: '/admin/products/' + product.id, product: product, imageRequired: false }) %>
   </main>
 <%- include('../../shared/includes/footer')  %>
