Milestone Project Online Store - Add file upload preview

--- a/views/admin/products/new-product.ejs
+++ b/views/admin/products/new-product.ejs
@@ -1,5 +1,6 @@
 <%- include('../../shared/includes/head', { pageTitle: '새로운 제품 추가' })  %>
 <link rel="stylesheet" href="/styles/forms.css">
+<script defer src="/scripts/image-preview.js"></script>
 </head>
 <body>
   <%- include('../../shared/includes/header')  %>
