--- a/views/admin/products/update-product.ejs
+++ b/views/admin/products/update-product.ejs
@@ -1,5 +1,6 @@
 <%- include('../../shared/includes/head', { pageTitle: '제품 업데이트' })  %>
 <link rel="stylesheet" href="/styles/forms.css">
+<script defer src="/scripts/image-preview.js"></script>
 </head>
 <body>
   <%- include('../../shared/includes/header')  %>
