--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -18,3 +18,20 @@ textarea {
   width: 90%;
   background-color: antiquewhite;
 }
+
+#image-upload-control {
+  display: flex;
+  align-items: center;
+}
+
+#image-upload-control input {
+  max-width: 15rem;
+}
+
+#image-upload-control img {
+  display: none;
+  width: 4rem;
+  height: 4rem;
+  object-fit: cover;
+  border-radius: var(--border-radius-small);
+}
