--- a/views/admin/products/includes/product-form.ejs
+++ b/views/admin/products/includes/product-form.ejs
@@ -13,15 +13,20 @@
       required
     />
   </p>
-  <p>
-    <label for="image">이미지</label>
-    <input
-      type="file"
-      id="image"
-      name="image"
-      accept="image/png, image/jpg"
-      <% if(imageRequired) { %>required<% } %> />
-  </p>
+
+  <div id="image-upload-control">
+    <p>
+      <label for="image">이미지</label>
+      <input
+        type="file"
+        id="image"
+        name="image"
+        accept="image/png, image/jpg"
+        <% if(imageRequired) { %>required<% } %> />
+    </p>
+    <img src="" alt="선택한 이미지">
+  </div>
+  
   <p>
     <label for="summary">요약</label>
     <input
