Milestone Project Online Store - Ajax/FE JS request & DOM update

--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -1,5 +1,6 @@
 <%- include('../../shared/includes/head', { pageTitle: '모든 제품' })  %>
 <link rel="stylesheet" href="/styles/products.css">
+<script defer src="/scripts/product-management.js"></script>
 </head>
 <body>
   <%- include('../../shared/includes/header')  %>
