--- a/views/admin/products/includes/product-item.ejs
+++ b/views/admin/products/includes/product-item.ejs
@@ -6,7 +6,13 @@
       <a href="/admin/products/<%= product.id %>" class="btn btn-alt"
         >보기 및 수정</a
       >
-      <button class="btn btn-alt">삭제</button>
+      <button
+        class="btn btn-alt"
+        data-productid="<%= product.id %>"
+        data-csrf="<%= locals.csrfToken %>"
+      >
+        삭제
+      </button>
     </div>
   </div>
 </article>
