--- a/views/shared/includes/product-item.ejs
+++ b/views/shared/includes/product-item.ejs
@@ -3,6 +3,7 @@
   <div class="product-item-content">
     <h2><%= product.title %></h2>
     <div class="product-item-actions">
+      <% if (locals.isAdmin) { %>
       <a href="/admin/products/<%= product.id %>" class="btn btn-alt"
         >보기 및 수정</a
       >
@@ -13,6 +14,11 @@
       >
         삭제
       </button>
+      <% } else { %>
+      <a class="btn btn-alt" href="/products/<%= product.id %>">
+        세부 정보 보기</a
+      >
+      <% } %>
     </div>
   </div>
 </article>
