Milestone Project Online Store - Add cart model

--- a/views/customer/products/product-details.ejs
+++ b/views/customer/products/product-details.ejs
@@ -9,7 +9,7 @@
       <div id="product-info">
         <h1><%= product.title %></h1>
         <p><%= product.price %>원</p>
-        <button>장바구니 추가</button>
+        <button class="btn">장바구니 추가</button>
       </div>
     </header>
 
