--- a/views/shared/includes/nav-items.ejs
+++ b/views/shared/includes/nav-items.ejs
@@ -1,7 +1,7 @@
 <ul class="nav-items">
   <% if (!locals.isAdmin) { %>
   <li><a href="/">상점</a></li>
-  <li><a href="/cart">장바구니</a></li>
+  <li><a href="/cart">장바구니 <span class="badge"><%= locals.cart.totalQuantity %></span></a></li>
   <% } %> 
 
   <% if (locals.isAuth && !locals.isAdmin) { %>
