Milestone Project Online Store - Cart update Ajax request (PATCH request)

--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -1,5 +1,6 @@
 <%- include('../../shared/includes/head', { pageTitle: '장바구니' })  %>
 <link rel="stylesheet" href="/styles/cart.css">
+<script defer src="/scripts/cart-item-management.js"></script>
 </head>
 <body>
   <%- include('../../shared/includes/header')  %>
