--- a/views/customer/cart/includes/cart-item.ejs
+++ b/views/customer/cart/includes/cart-item.ejs
@@ -7,8 +7,12 @@
     </p>
   </div>
 
-  <div class="cart-item-management">
+  <form
+    class="cart-item-management"
+    data-productid="<%= item.product.id %>"
+    data-csrf="<%= locals.csrfToken %>"
+  >
     <input type="number" value="<%= item.quantity %>" required />
-    <button class="btn">업데이트</button>
-  </div>
+    <button class="btn btn-alt">업데이트</button>
+  </form>
 </article>
