Milestone Project Online Store - DOM update after cart item update

--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -14,7 +14,7 @@
       <% } %>
     </ul>
     <div id="cart-total">
-      <p>총 가격: <%= locals.cart.totalPrice %>원</p>
+      <p>총 가격: <span id="cart-total-price"><%= locals.cart.totalPrice %></span>원</p>
       
       <button class="btn">제품 구매하기</button>
     </div>
