Milestone Project Online Store - Save order to database

--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -18,6 +18,7 @@
       
       <% if (locals.isAuth) { %>
         <form action="/orders" method="POST">
+          <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
           <button class="btn">제품 구매하기</button>
         </form>
       <% } else { %>
