--- a/views/customer/orders/all-orders.ejs
+++ b/views/customer/orders/all-orders.ejs
@@ -1,8 +1,10 @@
 <%- include('../../shared/includes/head', { pageTitle: '모든 주문' })  %>
+<link rel="stylesheet" href="/styles/orders.css">
 </head>
 <body>
   <%- include('../../shared/includes/header')  %>
   <main>
     <h1>모든 주문</h1>
+    <%- include('../../shared/includes/order-list') %>
   </main>
 <%- include('../../shared/includes/footer')  %>
