--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -16,13 +16,13 @@
     <div id="cart-total">
       <p>총 가격: <span id="cart-total-price"><%= locals.cart.totalPrice %></span>원</p>
       
-      <% if (locals.isAuth) { %>
+      <% if (locals.isAuth && locals.cart.totalQuantity > 0) { %>
         <form action="/orders" method="POST">
           <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
           <button class="btn">제품 구매하기</button>
         </form>
       <% } else { %>
-        <p id="cart-total-fallback">계속 진행하고 항목을 구입하려면 로그인하십시오.</p>
+        <p id="cart-total-fallback">계속해서 항목을 구매하려면 로그인하고 장바구니에 항목을 추가하십시오.</p>
       <% } %>
     </div>
   </main>
